Actualizar versión de acción de carga SARIF en el flujo de trabajo de seguridad y ajustar el archivo pom.xml para mejorar la configuración del proyecto.